variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: type mismatch;
 found   : Unit
 required: Boolean
while(nbPas=0){
           ^